fixed spacing problem in rating

--- a/src/main/resources/public/app.css
+++ b/src/main/resources/public/app.css
@@ -96,7 +96,13 @@ md-input-container {
   cursor: pointer;
 }
 
+.rating-star:focus{
+  outline: 0;
+}
 
+.rating-star:hover{
+  cursor: pointer;
+}
 
 
 
